--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "strict": true,
         "target": "ES6",
         "noEmitOnError": true,
-        "noImplicitAny": false,
+        "noImplicitAny": true,
         "strictNullChecks": true,
         "noUnusedParameters": false,
         "noUnusedLocals": true,
